# Battleship

./: Battleship.docx  CMakeLists.txt  client.c  client.h  communication.c  communication.h  config.h  game-logic.c  game-logic.h  klient.h  main.c  pipe.c  pipe.h  server.c  server.h
